--- a/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
+++ b/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\config.yaml\""
+    "config_path = r\"D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\config.yaml\""
    ]
   },
   {
@@ -33,22 +33,7 @@
    "outputs": [],
    "source": [
     "viedos_to_add = [\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20231005_HoldTrial076_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230729_HoldTrial086_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230729_HoldTrial109_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230730_HoldTrial067_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230730_HoldTrial084_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230806_HoldTrial064_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230810_HoldTrial095_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230813_HoldTrial069_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230915_HoldTrial032.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230916_HoldTrial018.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230921_HoldTrial021.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230921_HoldTrial031.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230925_HoldTrial012.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230925_HoldTrial074.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230929_HoldTrial037_TopView.avi\",\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20231004_HoldTrial067_TopView.avi\"\n",
+    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\RefineVideo.avi\"\n",
     "]\n",
     "\n",
     "crop_coords = [[0, 1280, 0, 1024]] * len(viedos_to_add)"
@@ -64,64 +49,50 @@
      "output_type": "stream",
      "text": [
       "Attempting to create a symbolic link of the video ...\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20231005_HoldTrial076_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20231005_HoldTrial076_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230729_HoldTrial086_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230729_HoldTrial086_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230729_HoldTrial109_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230729_HoldTrial109_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230730_HoldTrial067_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230730_HoldTrial067_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230730_HoldTrial084_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230730_HoldTrial084_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230806_HoldTrial064_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230806_HoldTrial064_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230810_HoldTrial095_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230810_HoldTrial095_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230813_HoldTrial069_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230813_HoldTrial069_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230915_HoldTrial032.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230915_HoldTrial032.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230916_HoldTrial018.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230916_HoldTrial018.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230921_HoldTrial021.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230921_HoldTrial021.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230921_HoldTrial031.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230921_HoldTrial031.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230925_HoldTrial012.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230925_HoldTrial012.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230925_HoldTrial074.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230925_HoldTrial074.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20230929_HoldTrial037_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20230929_HoldTrial037_TopView.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20231004_HoldTrial067_TopView.avi copied to D:\\YuLab\\Work\\GPS\\DLC\\Morad\\Model\\Top\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20231004_HoldTrial067_TopView.avi\n",
-      "Config file read successfully.\n",
-      "Frame extraction failed. Video files must be corrupted.\n",
-      "New videos were added to the project and frames have been extracted for labeling!\n"
+      "Created the symlink of D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20231025_HoldTrial085_TopView.avi to D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20231025_HoldTrial085_TopView.avi\n",
+      "New videos were added to the project! Use the function 'extract_frames' to select frames for labeling.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function deeplabcut.generate_training_dataset.frame_extraction.extract_frames(config, mode='automatic', algo='kmeans', crop=False, userfeedback=True, cluster_step=1, cluster_resizewidth=30, cluster_color=False, opencv=True, slider_width=25, config3d=None, extracted_cam=0, videos_list=None)>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "deeplabcut.add_new_videos(config_path, videos=viedos_to_add, copy_videos=False, coords=crop_coords, extract_frames=False)\n",
-    "\n"
+    "deeplabcut.add_new_videos(config_path, videos=viedos_to_add, copy_videos=False, coords=crop_coords, extract_frames=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Config file read successfully.\n",
+      "Extracting frames based on kmeans ...\n",
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 12.32  seconds.\n",
+      "Extracting and downsampling... 308  frames from the video.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "308it [00:03, 87.29it/s]\n",
+      "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kmeans clustering ... (this might take a while)\n",
+      "Frames were successfully extracted, for the videos listed in the config.yaml file.\n",
+      "\n",
+      "You can now label the frames using the function 'label_frames' (Note, you should label frames extracted from diverse videos (and many videos; we do not recommend training on single videos!)).\n"
+     ]
+    }
+   ],
    "source": [
     "deeplabcut.extract_frames(\n",
     "            config_path, userfeedback=False, videos_list=viedos_to_add, crop=True, mode=\"automatic\", algo= \"kmeans\",\n",
