--- a/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
+++ b/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
@@ -28,12 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "viedos_to_add = [\n",
-    "    r\"D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\RefineVideo.avi\"\n",
+    "    r\"D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Naveed_1.avi\",\n",
+    "    r\"D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Leopold_1.avi\",\n",
     "]\n",
     "\n",
     "crop_coords = [[0, 1280, 0, 1024]] * len(viedos_to_add)"
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,15 +70,34 @@
      "text": [
       "Config file read successfully.\n",
       "Extracting frames based on kmeans ...\n",
-      "Kmeans-quantization based extracting of frames from 0.0  seconds to 12.32  seconds.\n",
-      "Extracting and downsampling... 308  frames from the video.\n"
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 26.76  seconds.\n",
+      "Extracting and downsampling... 669  frames from the video.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "308it [00:03, 87.29it/s]\n",
+      "669it [00:06, 99.70it/s] \n",
+      "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kmeans clustering ... (this might take a while)\n",
+      "Extracting frames based on kmeans ...\n",
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 291.64  seconds.\n",
+      "Extracting and downsampling... 7291  frames from the video.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "7291it [01:13, 99.69it/s] \n",
       "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=3)\n"
      ]
