--- a/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
+++ b/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
@@ -28,16 +28,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "viedos_to_add = [\n",
-    "    r\"D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Naveed_1.avi\",\n",
-    "    r\"D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Leopold_1.avi\",\n",
+    "r\"D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Naveed_GPS_13_ThreeFPHoldSRT.avi\",\n",
+    "r\"D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Morad_GPS_13_ThreeFPHoldSRT.avi\",\n",
+    "r\"D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Leopold_GPS_12_ThreeFPHoldSRT.avi\",\n",
     "]\n",
     "\n",
     "crop_coords = [[0, 1280, 0, 1024]] * len(viedos_to_add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to create a symbolic link of the video ...\n",
+      "Created the symlink of D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Naveed_GPS_13_ThreeFPHoldSRT.avi to D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\videos\\RefineVideo_Naveed_GPS_13_ThreeFPHoldSRT.avi\n",
+      "Created the symlink of D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Morad_GPS_13_ThreeFPHoldSRT.avi to D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\videos\\RefineVideo_Morad_GPS_13_ThreeFPHoldSRT.avi\n",
+      "Created the symlink of D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Leopold_GPS_12_ThreeFPHoldSRT.avi to D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\videos\\RefineVideo_Leopold_GPS_12_ThreeFPHoldSRT.avi\n",
+      "New videos were added to the project! Use the function 'extract_frames' to select frames for labeling.\n"
+     ]
+    }
+   ],
+   "source": [
+    "deeplabcut.add_new_videos(config_path, videos=viedos_to_add, copy_videos=False, coords=crop_coords, extract_frames=False)\n"
    ]
   },
   {
@@ -49,36 +71,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to create a symbolic link of the video ...\n",
-      "Created the symlink of D:\\YuLab\\Work\\GPS\\DLC\\Morad\\VideoSet\\Top\\Kennard_20231025_HoldTrial085_TopView.avi to D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\videos\\Kennard_20231025_HoldTrial085_TopView.avi\n",
-      "New videos were added to the project! Use the function 'extract_frames' to select frames for labeling.\n"
-     ]
-    }
-   ],
-   "source": [
-    "deeplabcut.add_new_videos(config_path, videos=viedos_to_add, copy_videos=False, coords=crop_coords, extract_frames=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Config file read successfully.\n",
       "Extracting frames based on kmeans ...\n",
-      "Kmeans-quantization based extracting of frames from 0.0  seconds to 26.76  seconds.\n",
-      "Extracting and downsampling... 669  frames from the video.\n"
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 0.4  seconds.\n",
+      "Extracting frames based on kmeans ...\n",
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 10.96  seconds.\n",
+      "Extracting and downsampling... 274  frames from the video.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "669it [00:06, 99.70it/s] \n",
+      "274it [00:02, 99.67it/s] \n",
       "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=3)\n"
      ]
@@ -89,15 +94,15 @@
      "text": [
       "Kmeans clustering ... (this might take a while)\n",
       "Extracting frames based on kmeans ...\n",
-      "Kmeans-quantization based extracting of frames from 0.0  seconds to 291.64  seconds.\n",
-      "Extracting and downsampling... 7291  frames from the video.\n"
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 22.44  seconds.\n",
+      "Extracting and downsampling... 561  frames from the video.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7291it [01:13, 99.69it/s] \n",
+      "561it [00:05, 98.92it/s] \n",
       "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=3)\n"
      ]
