--- a/PythonCodes/DLCTracking/DLC_analyze_videos.ipynb
+++ b/PythonCodes/DLCTracking/DLC_analyze_videos.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = r\"E:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\config.yaml\""
+    "config_path = r\"D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\config.yaml\""
    ]
   },
   {
@@ -17236,7 +17236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
