--- a/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
+++ b/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = r\"D:\\DLC\\MoradFieldGPS-ZZH-2024-11-09\\config.yaml\""
+    "config_path = r\"D:\\DLC\\ChesterFieldGPS-ZZH-2024-11-14\\config.yaml\""
    ]
   },
   {
@@ -33,10 +33,11 @@
    "outputs": [],
    "source": [
     "viedos_to_add = [\n",
-    "r\"D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Naveed_GPS_20_ThreeFPHoldSRTProbe.avi\",\n",
+    "r\"D:\\DLC\\VideoSet\\ChesterFieldGPS-ZZH-2024-11-14\\RefineVideo_Field_Chester_01.avi\",\n",
+    "r\"D:\\DLC\\VideoSet\\ChesterFieldGPS-ZZH-2024-11-14\\RefineVideo_Field_Leo_01.avi\"\n",
     "]\n",
     "\n",
-    "crop_coords = [[0, 1280, 0, 1024]] * len(viedos_to_add)"
+    "crop_coords = [[200, 1600, 300, 900]] * len(viedos_to_add)"
    ]
   },
   {
@@ -49,7 +50,10 @@
      "output_type": "stream",
      "text": [
       "Attempting to create a symbolic link of the video ...\n",
-      "Created the symlink of D:\\DLC\\VideoSet\\MoradTopGPS-ZZH-2023-09-12\\RefineVideo_Naveed_GPS_20_ThreeFPHoldSRTProbe.avi to D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\videos\\RefineVideo_Naveed_GPS_20_ThreeFPHoldSRTProbe.avi\n",
+      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
+      "D:\\DLC\\VideoSet\\ChesterFieldGPS-ZZH-2024-11-14\\RefineVideo_Field_Chester_01.avi copied to D:\\DLC\\ChesterFieldGPS-ZZH-2024-11-14\\videos\\RefineVideo_Field_Chester_01.avi\n",
+      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
+      "D:\\DLC\\VideoSet\\ChesterFieldGPS-ZZH-2024-11-14\\RefineVideo_Field_Leo_01.avi copied to D:\\DLC\\ChesterFieldGPS-ZZH-2024-11-14\\videos\\RefineVideo_Field_Leo_01.avi\n",
       "New videos were added to the project! Use the function 'extract_frames' to select frames for labeling.\n"
      ]
     }
@@ -68,28 +72,7 @@
      "output_type": "stream",
      "text": [
       "Config file read successfully.\n",
-      "Extracting frames based on kmeans ...\n",
-      "Kmeans-quantization based extracting of frames from 0.0  seconds to 80.8  seconds.\n",
-      "Extracting and downsampling... 2020  frames from the video.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020it [00:24, 84.02it/s]\n",
-      "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  super()._check_params_vs_input(X, default_n_init=3)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kmeans clustering ... (this might take a while)\n",
-      "Frames were successfully extracted, for the videos listed in the config.yaml file.\n",
-      "\n",
-      "You can now label the frames using the function 'label_frames' (Note, you should label frames extracted from diverse videos (and many videos; we do not recommend training on single videos!)).\n"
+      "Frame extraction failed. Video files must be corrupted.\n"
      ]
     }
    ],
