--- a/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
+++ b/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
@@ -23,26 +23,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = r\"D:\\DLC\\ChesterFieldGPS-ZZH-2024-11-14\\config.yaml\""
+    "config_path = r\"D:\\DLC\\MoradFieldGPS-ZZH-2024-11-09\\config.yaml\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "viedos_to_add = [\n",
-    "r\"D:\\DLC\\VideoSet\\ChesterFieldGPS-ZZH-2024-11-14\\RefineVideo_Field_Chester_01.avi\",\n",
-    "r\"D:\\DLC\\VideoSet\\ChesterFieldGPS-ZZH-2024-11-14\\RefineVideo_Field_Leo_01.avi\"\n",
+    "r\"D:\\DLC\\VideoSet\\MoradFieldGPS-ZZH-2024-11-09\\GatheredVideo_Syed_01.avi\",\n",
+    "r\"D:\\DLC\\VideoSet\\MoradFieldGPS-ZZH-2024-11-09\\GatheredVideo_Reed_01.avi\",\n",
     "]\n",
     "\n",
-    "crop_coords = [[200, 1600, 300, 900]] * len(viedos_to_add)"
+    "crop_coords = [[0, 1280, 0, 1024]] * len(viedos_to_add) # MoradTopGPS\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -50,10 +50,7 @@
      "output_type": "stream",
      "text": [
       "Attempting to create a symbolic link of the video ...\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\DLC\\VideoSet\\ChesterFieldGPS-ZZH-2024-11-14\\RefineVideo_Field_Chester_01.avi copied to D:\\DLC\\ChesterFieldGPS-ZZH-2024-11-14\\videos\\RefineVideo_Field_Chester_01.avi\n",
-      "Symlink creation impossible (exFat architecture?): copying the video instead.\n",
-      "D:\\DLC\\VideoSet\\ChesterFieldGPS-ZZH-2024-11-14\\RefineVideo_Field_Leo_01.avi copied to D:\\DLC\\ChesterFieldGPS-ZZH-2024-11-14\\videos\\RefineVideo_Field_Leo_01.avi\n",
+      "Video D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\videos\\RefineVideo_Top_Syed_03.avi already exists. Skipping...\n",
       "New videos were added to the project! Use the function 'extract_frames' to select frames for labeling.\n"
      ]
     }
@@ -64,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +69,11 @@
      "output_type": "stream",
      "text": [
       "Config file read successfully.\n",
-      "Frame extraction failed. Video files must be corrupted.\n"
+      "Extracting frames based on kmeans ...\n",
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 0.08  seconds.\n",
+      "Frames were successfully extracted, for the videos listed in the config.yaml file.\n",
+      "\n",
+      "You can now label the frames using the function 'label_frames' (Note, you should label frames extracted from diverse videos (and many videos; we do not recommend training on single videos!)).\n"
      ]
     }
    ],
