--- a/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
+++ b/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "viedos_to_add = [\n",
-    "r\"D:\\DLC\\VideoSet\\MoradFieldGPS-ZZH-2024-11-09\\GatheredVideo_Syed_01.avi\",\n",
-    "r\"D:\\DLC\\VideoSet\\MoradFieldGPS-ZZH-2024-11-09\\GatheredVideo_Reed_01.avi\",\n",
+    "r\"D:\\DLC\\VideoSet\\MoradFieldGPS-ZZH-2024-11-09\\GatheredVideo_Leopold_01.avi\",\n",
     "]\n",
     "\n",
-    "crop_coords = [[0, 1280, 0, 1024]] * len(viedos_to_add) # MoradTopGPS\n"
+    "# crop_coords = [[0, 1280, 0, 1024]] * len(viedos_to_add)  # MoradTopGPS\n",
+    "crop_coords = [[0, 1280, 300, 900]] * len(viedos_to_add) # MoradFieldGPS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to create a symbolic link of the video ...\n",
+      "Created the symlink of D:\\DLC\\VideoSet\\MoradFieldGPS-ZZH-2024-11-09\\GatheredVideo_Leopold_01.avi to D:\\DLC\\MoradFieldGPS-ZZH-2024-11-09\\videos\\GatheredVideo_Leopold_01.avi\n",
+      "New videos were added to the project! Use the function 'extract_frames' to select frames for labeling.\n"
+     ]
+    }
+   ],
+   "source": [
+    "deeplabcut.add_new_videos(config_path, videos=viedos_to_add, copy_videos=False, coords=crop_coords, extract_frames=False)\n"
    ]
   },
   {
@@ -49,28 +68,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to create a symbolic link of the video ...\n",
-      "Video D:\\DLC\\MoradTopGPS-ZZH-2023-09-12\\videos\\RefineVideo_Top_Syed_03.avi already exists. Skipping...\n",
-      "New videos were added to the project! Use the function 'extract_frames' to select frames for labeling.\n"
+      "Config file read successfully.\n",
+      "Extracting frames based on kmeans ...\n",
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 82.12  seconds.\n",
+      "Extracting and downsampling... 2053  frames from the video.\n"
      ]
-    }
-   ],
-   "source": [
-    "deeplabcut.add_new_videos(config_path, videos=viedos_to_add, copy_videos=False, coords=crop_coords, extract_frames=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2053it [00:14, 139.29it/s]\n",
+      "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=3)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Config file read successfully.\n",
-      "Extracting frames based on kmeans ...\n",
-      "Kmeans-quantization based extracting of frames from 0.0  seconds to 0.08  seconds.\n",
+      "Kmeans clustering ... (this might take a while)\n",
       "Frames were successfully extracted, for the videos listed in the config.yaml file.\n",
       "\n",
       "You can now label the frames using the function 'label_frames' (Note, you should label frames extracted from diverse videos (and many videos; we do not recommend training on single videos!)).\n"
