--- a/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
+++ b/PythonCodes/DLCTracking/DLC_add_new_videos.ipynb
@@ -19,30 +19,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = r\"D:\\DLC\\MoradFieldGPS-ZZH-2024-11-09\\config.yaml\""
+    "config_path = r\"D:\\DLC\\GaviFieldGPS-ZZH-2025-08-01\\config.yaml\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "viedos_to_add = [\n",
-    "r\"D:\\DLC\\VideoSet\\MoradFieldGPS-ZZH-2024-11-09\\GatheredVideo_Leopold_01.avi\",\n",
+    "r\"D:\\DLC\\VideoSet\\GaviFieldGPS-ZZH-2025-07-31\\RefineVideo_Field_Gavi_01.avi\"\n",
     "]\n",
     "\n",
-    "# crop_coords = [[0, 1280, 0, 1024]] * len(viedos_to_add)  # MoradTopGPS\n",
-    "crop_coords = [[0, 1280, 300, 900]] * len(viedos_to_add) # MoradFieldGPS\n"
+    "crop_coords = [[0, 1624, 0, 660]] * len(viedos_to_add)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +49,9 @@
      "output_type": "stream",
      "text": [
       "Attempting to create a symbolic link of the video ...\n",
-      "Created the symlink of D:\\DLC\\VideoSet\\MoradFieldGPS-ZZH-2024-11-09\\GatheredVideo_Leopold_01.avi to D:\\DLC\\MoradFieldGPS-ZZH-2024-11-09\\videos\\GatheredVideo_Leopold_01.avi\n",
+      "Created the symlink of D:\\DLC\\VideoSet\\MoradInitGPS-ZZH-2024-11-09\\RefineVideo_Init_Naveed_01.avi to D:\\DLC\\MoradInitGPS-ZZH-2024-11-09\\videos\\RefineVideo_Init_Naveed_01.avi\n",
+      "Created the symlink of D:\\DLC\\VideoSet\\MoradInitGPS-ZZH-2024-11-09\\RefineVideo_Init_Kennard_01.avi to D:\\DLC\\MoradInitGPS-ZZH-2024-11-09\\videos\\RefineVideo_Init_Kennard_01.avi\n",
+      "Created the symlink of D:\\DLC\\VideoSet\\MoradInitGPS-ZZH-2024-11-09\\RefineVideo_Init_Morad_01.avi to D:\\DLC\\MoradInitGPS-ZZH-2024-11-09\\videos\\RefineVideo_Init_Morad_01.avi\n",
       "New videos were added to the project! Use the function 'extract_frames' to select frames for labeling.\n"
      ]
     }
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -70,15 +71,53 @@
      "text": [
       "Config file read successfully.\n",
       "Extracting frames based on kmeans ...\n",
-      "Kmeans-quantization based extracting of frames from 0.0  seconds to 82.12  seconds.\n",
-      "Extracting and downsampling... 2053  frames from the video.\n"
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 4.36  seconds.\n",
+      "Extracting and downsampling... 109  frames from the video.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2053it [00:14, 139.29it/s]\n",
+      "109it [00:00, 121.61it/s]\n",
+      "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kmeans clustering ... (this might take a while)\n",
+      "Extracting frames based on kmeans ...\n",
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 4.12  seconds.\n",
+      "Extracting and downsampling... 103  frames from the video.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "103it [00:00, 123.10it/s]\n",
+      "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kmeans clustering ... (this might take a while)\n",
+      "Extracting frames based on kmeans ...\n",
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 3.64  seconds.\n",
+      "Extracting and downsampling... 91  frames from the video.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "91it [00:00, 123.80it/s]\n",
       "c:\\Users\\ZhuohaoZhang\\anaconda3\\envs\\DEEPLABCUT\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1930: FutureWarning: The default value of `n_init` will change from 3 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=3)\n"
      ]
